FIX: similar items imgs align left

--- a/public/main.css
+++ b/public/main.css
@@ -92,7 +92,7 @@
 }
 
 .miniSearchItem{
-  text-align: center;
+  text-align: left;
 }
 
 .miniItemImg{
